# pushquantum2

./: README.md
h2-groundstate-energy/: .gitignore
h2-groundstate-energy/submission/: start_here.ipynb
quandela-pushquantum-24/: README.md  ResultFile.csv  ResultFile_noisy.csv  ResultFile_noisy_0.1.csv  ResultFile_noisy_0.3.csv  ResultFile_noisy_0.5.csv  ResultFile_noisy_0.75.csv  ResultFile_noisy_1.csv  VQC.ipynb  VQC_RealHW.ipynb  VQC_noisy.ipynb  VQCstateDependent.ipynb  pyproject.toml  token
quandela-pushquantum-24/submission/: .gitignore  Answers.tex  BasicPercevalTutorial.ipynb  Min_func.ipynb  Part_2-Porcedure.ipynb  Preparation.ipynb  ResultFile.csv  ResultFile_noisy_0.1.csv  ResultFile_noisy_0.3.csv  ResultFile_noisy_0.5.csv  ResultFile_noisy_0.75.csv  VQC.ipynb  VQCstateDependent.ipynb  circuits.py  solution.ipynb  test_circuit.ipynb  tests.ipynb  total_test.ipynb  utils.py
