[project]
name = "submission"
version = "0.1.0"
requires-python = ">=3.8"

# You can add dependencies with `aqora add`
dependencies = ["perceval-quandela>=0.11.2"]

[build-system]
requires = ["uv>=0.4.20", "setuptools>=75", "wheel>=0.44"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
[tool.setuptools.package-data]
submission = ["*"]

[tool.aqora]
type = "submission"
competition = "quandela-pushquantum-24"

[tool.aqora.refs]
solution = { path = "submission.solution", notebook = true }
